--- a/idle.html
+++ b/idle.html
@@ -355,6 +355,159 @@
         <hr>
         <p id="copyText">1|14|3|0|0|3|20|20|0|0|0|20|20|11|5|248|20|22|-1|0|0|-20|22|0|0|343|20|22|0|0|0|-20|22|1|0|0|20|23|0|0|355|20|23|2|0|0|20|23|-1|0|355|20|23|0|0|2|0|0|0|20|20|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0</p>
         </div>
+    <b>42.</b>
+    <div class="box">
+        <p>@henry_emilykinnie</p>
+        <hr>
+          <img src="https://media.discordapp.net/attachments/1191910909011034242/1193638764610867320/Screenshot_20240107_142519_Gacha_Life_2.jpg?ex=65bfe6ba&amp;is=65ad71ba&amp;hm=278e1d5de57dab75c8f018a4a7bc6544735a5d149e3ed7cbadc2a4bdf026a9ad&amp;=&amp;format=webp&amp;width=411&amp;height=421" alt="GIF - Screenshot Gacha Life .jpg?ex=bfeba&amp;is=adba&amp;hm=eddedabcfaabcadeedcbadcabdfaad&amp;"/>
+        <hr>
+        <p id="copyText">1|14|3|0|0|0|20|20|0|0|0|20|20|1|0|0|20|22|-1|0|0|-20|22|0|0|0|20|22|0|0|0|-20|22|0|0|0|20|23|-1|0|0|20|23|1|0|0|20|23|0|0|0|20|23|0|0|354|-1|0|0|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>43.</b>
+    <div class="box">
+        <p>@henry_emilykinnie</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1193639158669918280/Screenshot_20240107_142536_Gacha_Life_2.jpg?ex=65bfe718&amp;is=65ad7218&amp;hm=ea2a328ad5f0ada752317eab3b12a5fba823183ab9f3bea1fec16ddb6aedc729&amp;=&amp;format=webp&amp;width=413&amp;height=421" alt="GIF - Screenshot Gacha Life .jpg?ex=bfe&amp;is=ad&amp;hm=eaaadfadaeabbafbaabfbeafecddbaedc&amp;"/>
+        <hr>
+        <p id="copyText">1|15|15|0|0|13|20|20|0|0|11|20|20|-13|-7|307|20|22|13|-8|46|-20|22|0|0|27|20|22|-1|2|329|-20|22|0|0|0|20|23|-1|0|0|20|23|1|0|0|20|23|0|0|0|20|23|0|0|0|-1|0|0|21|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>44.</b>
+    <div class="box">
+        <p>@henry_emilykinnie</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1193639651731329125/Screenshot_20240107_142708_Gacha_Life_2.jpg?ex=65bfe78d&amp;is=65ad728d&amp;hm=ac24055f9f811f0b75fe2619b33490a2c8f7efe92330110e112976dcfe586876&amp;=&amp;format=webp&amp;width=419&amp;height=421" alt="GIF - Screenshot Gacha Life .jpg?ex=bfed&amp;is=add&amp;hm=acfffbfebacfefeedcfe&amp;"/>
+        <hr>
+        <p id="copyText">4|14|3|0|0|355|20|20|1|-1|24|-19|19|1|4|251|20|22|4|2|102|-20|22|0|0|354|20|22|0|0|355|-20|22|0|0|0|20|23|-1|0|0|20|23|0|3|3|20|23|0|2|0|20|23|0|0|0|-1|0|0|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>45.</b>
+    <div class="box">
+        <p>@robskie.</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1193645545068183733/IMG_4108.png?ex=65bfed0a&amp;is=65ad780a&amp;hm=4509a5606f81010f708d60d6da391fb66229a00fd72bdc9fe31a1697b159f369&amp;=&amp;format=webp&amp;quality=lossless&amp;width=276&amp;height=421" alt="GIF - IMG .png?ex=bfeda&amp;is=ada&amp;hm=affdddafbafdbdcfeabf&amp;"/>
+        <hr>
+        <p id="copyText">1|14|5|0|0|0|20|20|0|0|0|20|20|3|4|204|20|20|1|-1|230|-20|20|-8|1|338|20|20|-4|0|345|-20|20|-4|0|307|20|20|-5|0|0|20|20|26|-12|63|20|20|-4|0|0|20|20|-9|0|5|-5|0|353|20|20|0|0|0|-2|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>46.</b>
+    <div class="box">
+        <p>@rand0m_artst</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1193647297804898394/Screenshot_20240107-150444_Gacha_Life_2.jpg?ex=65bfeeac&amp;is=65ad79ac&amp;hm=c09157064c24a65cc3557e22d74c9e048c748ca1249739b56fb05d33177b50da&amp;=&amp;format=webp&amp;width=237&amp;height=421" alt="GIF - Screenshot Gacha Life .jpg?ex=bfeeac&amp;is=adac&amp;hm=ccaccedceccabfbdbda&amp;"/>
+        <hr>
+        <p id="copyText">1|15|14|0|0|0|20|20|0|0|44|-20|20|15|5|335|20|20|-3|4|13|-20|20|1|0|333|20|20|1|0|5|-20|20|-3|0|0|20|20|-4|0|0|20|20|-3|0|0|20|20|-3|0|0|20|20|4|1|7|0|0|8|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>47.</b>
+    <div class="box">
+        <p>@kh04n_1s</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1193778287516848138/Screenshot_20240108-110812.png?ex=65c068ab&amp;is=65adf3ab&amp;hm=6f634ce68fed19070e85d3da6fface73da43151b644880e506fcfa1f1672110b&amp;=&amp;format=webp&amp;quality=lossless&amp;width=305&amp;height=421" alt="GIF - Screenshot .png?ex=cab&amp;is=adfab&amp;hm=fcefededdaffacedabefcfafb&amp;"/>
+        <hr>
+        <p id="copyText">1|14|3|0|0|14|20|20|0|0|0|20|20|-4|-22|304|24|22|0|-23|286|-22|21|0|-23|0|24|23|-1|-24|357|-22|21|0|-18|0|21|24|2|-24|0|21|25|-2|-11|0|21|27|3|-12|0|21|25|0|-26|10|0|-22|0|19|21|0|0|0|0|0|0|0|0|-1|0|6|0|-3|0|7|0|0|0|0|0</p>
+    </div>
+    <b>48.</b>
+    <div class="box">
+        <p>@henry_emilykinnie</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1193928179782525028/Screenshot_20240108_092610_Gacha_Life_2.png?ex=65c0f444&amp;is=65ae7f44&amp;hm=3e8081591439d57b3cc50b3e58e06de751149a5d6ed9ad8cf93f13f8bba96b02&amp;=&amp;format=webp&amp;quality=lossless&amp;width=316&amp;height=421" alt="GIF - Screenshot Gacha Life .png?ex=cf&amp;is=aef&amp;hm=edbccbeedeadedadcfffbbab&amp;"/>
+        <hr>
+        <p id="copyText">6|14|14|0|0|339|20|20|0|0|339|20|20|9|3|312|20|22|0|1|34|-20|22|0|0|343|20|22|0|0|0|-20|22|0|0|0|20|23|0|0|357|20|23|1|0|4|20|23|0|0|0|-20|23|0|0|0|-1|0|0|20|20|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0</p>
+    </div>
+    <b>49.</b>  
+    <div class="box">
+        <p>@henry_emilykinnie</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1193928356937334895/Screenshot_20240108_092646_Gacha_Life_2.png?ex=65c0f46e&amp;is=65ae7f6e&amp;hm=8c740dceeef41a3af5f38cf1b361b107392c3c0b289ffb8b7b1c4500c05c072f&amp;=&amp;format=webp&amp;quality=lossless&amp;width=316&amp;height=421" alt="GIF - Screenshot Gacha Life .png?ex=cfe&amp;is=aefe&amp;hm=cdceeefaaffcfbbccbffbbbcccf&amp;"/>
+        <hr>
+        <p id="copyText">7|14|14|0|0|339|20|20|0|0|339|20|20|-3|-2|6|20|22|8|-3|351|-20|22|0|0|8|20|22|0|0|342|-20|22|0|0|0|20|23|0|0|357|20|23|1|0|4|20|23|-1|0|356|-20|23|0|0|0|-1|0|0|20|20|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0</p>
+    </div>
+    <b>50.</b>  
+    <div class="box">
+        <p>@henry_emilykinnie</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1193928643127292015/Screenshot_20240108_093036_Gacha_Life_2.png?ex=65c0f4b2&amp;is=65ae7fb2&amp;hm=b71aee4ae4c1e4498b1c8dbab5c1332290bc79e8c0044cd04614ca5be716741f&amp;=&amp;format=webp&amp;quality=lossless&amp;width=316&amp;height=421" alt="GIF - Screenshot Gacha Life .png?ex=cfb&amp;is=aefb&amp;hm=baeeaecebcdbabcbceccdcabef&amp;"/>
+        <hr>
+        <p id="copyText">4|7|7|1|-1|42|-20|20|0|0|0|20|20|-6|1|175|20|22|9|0|157|20|22|0|-1|11|20|22|0|0|342|-20|22|0|0|0|20|23|0|0|357|20|23|1|0|4|20|23|-1|0|356|-20|23|0|0|0|-1|0|0|20|20|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0</p>
+    </div>
+    <b>51.</b>  
+    <div class="box">
+        <p>@henry_emilykinnie</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1193928736723189770/Screenshot_20240108_093113_Gacha_Life_2.png?ex=65c0f4c8&amp;is=65ae7fc8&amp;hm=3d57ab119e92d598c1a7bd14f97bfb5207a1a258708367c1e0d8787d066881ba&amp;=&amp;format=webp&amp;quality=lossless&amp;width=316&amp;height=421" alt="GIF - Screenshot Gacha Life .png?ex=cfc&amp;is=aefc&amp;hm=dabedcabdfbfbaaceddba&amp;"/>
+        <hr>
+        <p id="copyText">7|3|3|0|0|0|20|20|0|0|11|20|20|-2|-2|18|20|22|6|-3|332|-20|22|0|0|7|20|22|0|0|346|-20|22|0|0|0|20|23|0|0|357|20|23|1|0|4|20|23|-1|0|356|-20|23|0|0|0|-1|0|0|20|20|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0</p>
+    </div>
+    <b>52.</b>  
+    <div class="box">
+        <p>@henry_emilykinnie</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1193928835977187368/Screenshot_20240108_093542_Gacha_Life_2.png?ex=65c0f4e0&amp;is=65ae7fe0&amp;hm=639cf42a7b75548adb8795540460bf1441c144c48697be982f759ca6fbe7dacd&amp;=&amp;format=webp&amp;quality=lossless&amp;width=316&amp;height=421" alt="GIF - Screenshot Gacha Life .png?ex=cfe&amp;is=aefe&amp;hm=cfabadbbfccbefcafbedacd&amp;"/>
+        <hr>
+        <p id="copyText">7|15|7|0|0|0|20|20|0|0|11|20|20|-7|-6|23|20|22|16|-41|267|-20|22|0|0|19|20|22|0|0|264|-20|22|0|0|0|20|23|0|0|357|20|23|1|0|4|20|23|-1|0|356|-20|23|0|1|346|0|0|0|20|20|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0</p>
+    </div>
+    <b>53.</b>
+    <div class="box">
+        <p>@og_arlo</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1194313993020514384/IMG_6363.png?ex=65c25b95&amp;is=65afe695&amp;hm=4fcb9937c8385f965c740422c2f9968a537a9a9f9aac1cfb691e3659bf2ecce0&amp;=&amp;format=webp&amp;quality=lossless&amp;width=193&amp;height=420" alt="GIF - IMG .png?ex=cb&amp;is=afe&amp;hm=fcbcfccfaaafaaccfbebfecce&amp;"/>
+        <hr>
+        <p id="copyText">1|3|5|0|0|50|-20|20|0|0|356|20|20|-5|-8|313|20|20|-5|2|229|-20|20|0|-2|10|20|20|-5|0|355|-20|20|3|0|2|20|20|-4|0|351|20|20|0|0|5|21|20|2|0|360|20|20|-3|0|5|-1|0|357|17|20|0|0|0|-1|0|0|0|0|0|-1|5|0|-1|-3|5|-3|0|0|0|1</p>
+    </div>
+    <b>54.</b>
+    <div class="box">
+        <p>@aeronarc</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1194331578583756820/IMG_0184.png?ex=65c26bf5&amp;is=65aff6f5&amp;hm=62f2e5cee2053f3614c11727c2745e0c8f038d7330418d43a8062e85d12e1e17&amp;=&amp;format=webp&amp;quality=lossless&amp;width=165&amp;height=421" alt="GIF - IMG .png?ex=cbf&amp;is=afff&amp;hm=feceefccecfddaedee&amp;"/>
+        <hr>
+        <p id="copyText">1|14|14|0|0|0|20|20|0|0|0|20|20|7|6|235|20|20|1|0|74|-20|20|-5|4|334|20|20|-2|0|350|-20|20|3|3|342|20|20|3|-1|351|20|20|37|-2|53|19|20|-11|5|354|20|22|-4|0|3|0|0|353|20|20|0|0|0|0|0|0|0|0|0|0|4|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>55.</b>
+    <div class="box">
+        <p>@aeronarc</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1194331708988866600/IMG_0185.png?ex=65c26c15&amp;is=65aff715&amp;hm=8f87c3ea036f3ce63f1eef5e7724de46f36fa5ae5cd88d1b0d09635e49270c45&amp;=&amp;format=webp&amp;quality=lossless&amp;width=324&amp;height=421" alt="GIF - IMG .png?ex=cc&amp;is=aff&amp;hm=fceafcefeefedeffaaecddbdec&amp;"/>
+        <hr>
+        <p id="copyText">1|14|2|0|0|0|20|20|0|0|0|20|20|28|1|254|20|20|11|17|46|-20|20|36|5|14|20|20|30|18|41|-20|20|2|-9|359|20|22|-8|-3|0|20|20|3|-9|0|20|22|-12|-4|357|20|20|40|13|52|13|5|48|20|20|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0|0</p>
+    </div>
+    <b>56.</b>
+    <div class="box">
+        <p>@og_arlo</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1194402793600073728/IMG_6377.png?ex=65c2ae48&amp;is=65b03948&amp;hm=a7098a6342af3909ac2c22f14976fe81f0ff3aedbeebaf440f0b5ed27c57d9e0&amp;=&amp;format=webp&amp;quality=lossless&amp;width=220&amp;height=421" alt="GIF - IMG .png?ex=cae&amp;is=b&amp;hm=aaafaccffefffaedbeebaffbedcde&amp;"/>
+        <hr>
+        <p id="copyText">4|3|3|0|0|40|-20|20|0|0|40|-20|20|38|-3|209|18|-20|-24|0|318|20|20|1|0|325|20|20|-4|-2|6|-20|20|3|0|357|20|20|-6|0|0|20|20|5|0|5|20|20|-4|-1|1|-20|20|0|1|1|-1|0|0|17|20|0|0|0|0|0|0|0|0|0|-1|5|0|0|-4|5|-1|0|0|0|0</p>
+    </div>
+    <b>57.</b>
+    <div class="box">
+        <p>@jzai.</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1194549389281202206/IMG_3050.png?ex=65c336d0&amp;is=65b0c1d0&amp;hm=995d61eb5205a1a4dc31f7b649fadc4a69ac362a68cc449b5d83c34db242e27f&amp;=&amp;format=webp&amp;quality=lossless&amp;width=315&amp;height=421" alt="GIF - IMG .png?ex=cd&amp;is=bcd&amp;hm=debaadcfbfadcaacaccbdcdbef&amp;"/>
+        <hr>
+        <p id="copyText">4|14|14|0|0|0|20|20|0|0|41|-20|20|5|0|251|20|20|7|2|48|20|20|1|-3|352|20|20|1|3|348|-20|20|0|0|358|20|21|0|1|355|20|21|2|4|1|20|20|4|0|0|20|21|0|-2|5|0|-3|355|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>58.</b>
+    <div class="box">
+        <p>@jzai.</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1194549713236668416/IMG_3052.png?ex=65c3371d&amp;is=65b0c21d&amp;hm=6da287eb3f2c07930d101c054672e07b42c5b97335d72ede712e76aaf88bcb16&amp;=&amp;format=webp&amp;quality=lossless&amp;width=315&amp;height=421" alt="GIF - IMG .png?ex=cd&amp;is=bcd&amp;hm=daebfcdcebcbdedeeaafbcb&amp;"/>
+        <hr>
+        <p id="copyText">5|1|2|0|0|0|20|20|0|0|0|20|20|0|1|254|20|20|1|3|112|-20|20|-2|1|1|20|20|2|2|0|-20|20|0|2|0|20|20|-1|-1|0|20|20|0|2|356|20|20|0|-1|34|20|20|0|0|0|-1|0|0|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>59.</b>
+    <div class="box">
+        <p>@jzai.</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1194618431698370620/IMG_3059.png?ex=65c3771d&amp;is=65b1021d&amp;hm=ab3c04bc3a6fdb1a38d931091deabc37c15373d23143be98849f1bb1b4dd1a7d&amp;=&amp;format=webp&amp;quality=lossless&amp;width=233&amp;height=421" alt="GIF - IMG .png?ex=cd&amp;is=bd&amp;hm=abcbcafdbaddeabccdbefbbbddad&amp;"/>
+        <hr>
+        <p id="copyText">6|12|12|0|1|141|-20|20|0|0|142|-20|20|-7|-6|171|20|20|10|-7|187|-20|20|0|0|20|20|20|0|0|334|-20|20|0|0|352|20|20|-1|0|5|20|20|4|1|355|20|20|-3|-1|37|20|20|0|0|0|-1|0|357|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>60.</b>
+    <div class="box">
+        <p>@jzai.</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1194618740462071900/IMG_3060.png?ex=65c37766&amp;is=65b10266&amp;hm=47a977e38169a208c8b522627a04ee4f464fc4a1e504510daeba5f4a74c79e36&amp;=&amp;format=webp&amp;quality=lossless&amp;width=223&amp;height=421" alt="GIF - IMG .png?ex=c&amp;is=b&amp;hm=aeacbaeeffcaedaebaface&amp;"/>
+        <hr>
+        <p id="copyText">4|12|7|0|0|347|20|20|0|0|330|20|20|0|-1|332|20|20|12|-5|143|20|20|0|1|0|20|20|2|1|334|-20|20|2|1|0|20|20|3|1|0|20|20|2|1|0|20|20|3|1|0|20|20|2|-1|353|2|1|0|20|20|0|0|0|0|0|0|0|0|0|0|4|0|0|0|5|0|0|0|0|0</p>
+    </div>
+ 
 
 
 <script src="script.js"></script>
