--- a/idle.html
+++ b/idle.html
@@ -507,7 +507,191 @@
         <hr>
         <p id="copyText">4|12|7|0|0|347|20|20|0|0|330|20|20|0|-1|332|20|20|12|-5|143|20|20|0|1|0|20|20|2|1|334|-20|20|2|1|0|20|20|3|1|0|20|20|2|1|0|20|20|3|1|0|20|20|2|-1|353|2|1|0|20|20|0|0|0|0|0|0|0|0|0|0|4|0|0|0|5|0|0|0|0|0</p>
     </div>
- 
+        <b>61.</b>
+    <div class="box">
+        <p>@hrts4kris</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1194815322360905768/IMG_7257.png?ex=65c42e7b&amp;is=65b1b97b&amp;hm=e600abe6eae8f6d765aa9129e9105899a0a859340d1960f49fe24bd715441315&amp;=&amp;format=webp&amp;quality=lossless&amp;width=194&amp;height=420" alt="GIF - IMG .png?ex=ceb&amp;is=bbb&amp;hm=eabeeaefdaaeaadffebd&amp;"/>
+        <hr>
+        <p id="copyText">2|15|12|0|0|101|-20|20|0|0|0|20|20|57|-18|146|-20|20|-34|10|325|20|20|19|-2|317|-20|20|-19|6|343|20|20|26|0|360|-20|20|-11|0|4|20|20|37|1|338|-20|20|-14|1|24|20|20|0|0|342|0|0|342|-20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>62.</b>
+    <div class="box">
+        <p>@hrts4kris</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1194815379097276437/IMG_7256.png?ex=65c42e88&amp;is=65b1b988&amp;hm=973f78725bcfd5bdff77436cc8c1a5a9802f465f37a73182e6acffa3f0763cac&amp;=&amp;format=webp&amp;quality=lossless&amp;width=194&amp;height=420" alt="GIF - IMG .png?ex=ce&amp;is=bb&amp;hm=fbcfdbdffcccaaffaeacffafcac&amp;"/>
+        <hr>
+        <p id="copyText">2|7|12|0|0|0|20|20|0|0|83|-20|20|-9|-28|72|20|20|8|-3|151|-20|20|4|0|68|20|20|0|0|344|-20|20|-2|-2|266|20|20|-1|0|23|20|20|36|-33|33|20|20|-15|-3|19|20|20|4|0|10|-1|0|6|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>63.</b>
+    <div class="box">
+        <p>@theamethystangel</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1194856818053218494/IMG_7102.png?ex=65bb1aa0&amp;is=65a8a5a0&amp;hm=14a60995467c3c55535281c90f43ba61e7fa0fe1467d3fb7cb8ad155f5ad4e44&amp;=&amp;format=webp&amp;quality=lossless&amp;width=280&amp;height=421" alt="GIF - IMG .png?ex=bbaa&amp;is=aaa&amp;hm=acccfbaefafedfbcbadfade&amp;"/>
+        <hr>
+        <p id="copyText">1|14|6|0|0|19|20|20|0|0|0|20|20|-6|-29|133|-20|-21|-1|-12|19|-20|21|6|-21|29|20|21|7|-17|16|-20|21|-1|-19|5|22|24|-1|-19|360|22|24|-6|-11|8|22|24|-1|-12|1|22|24|5|-19|5|1|-19|7|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>64.</b>
+    <div class="box">
+        <p>@https.koifish</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1195004204956274728/IMG-20240111-WA0013.jpg?ex=65bba3e4&amp;is=65a92ee4&amp;hm=1641cb2dc25946621a3d7f05a6c1788cc068e06a8fce1da6153c749efd14da92&amp;=&amp;format=webp&amp;width=311&amp;height=421" alt="GIF - IMG WA.jpg?ex=bbae&amp;is=aee&amp;hm=cbdcadfaccceafcedacefdda&amp;"/>
+        <hr>
+        <p id="copyText">1|12|12|1|0|51|-20|20|0|0|0|20|20|33|3|180|20|20|3|6|29|-20|20|9|2|311|20|20|17|5|29|-20|20|-10|-3|0|20|20|-17|-2|11|-20|20|-10|-3|0|20|20|-13|-2|5|-20|20|22|5|8|-1|0|28|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>65.</b>
+    <div class="box">
+        <p>@https.koifish</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1195004325748019250/IMG-20240111-WA0018.jpg?ex=65bba401&amp;is=65a92f01&amp;hm=a00c81bb9a6da17d7ab36a99da259cda01f005e6d3c0b2b953edd9503dcae91b&amp;=&amp;format=webp&amp;width=280&amp;height=421" alt="GIF - IMG WA.jpg?ex=bba&amp;is=af&amp;hm=acbbadadabadacdafedcbbedddcaeb&amp;"/>
+        <hr>
+        <p id="copyText">1|14|2|0|0|0|20|20|0|-5|0|20|20|28|-2|307|20|20|6|1|30|-20|20|10|-1|321|20|20|12|3|13|-20|20|-9|-3|0|20|20|-11|-1|22|20|20|-9|-3|0|20|20|-22|-6|117|20|20|21|6|16|-1|0|27|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>66.</b>
+    <div class="box">
+        <p>@https.koifish</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1195005510265610261/IMG-20240111-WA0016.jpg?ex=65bba51b&amp;is=65a9301b&amp;hm=3be0556b07a441c94933ddb3691bc527ee066d52253ff07b24afef5dac2cf6a7&amp;=&amp;format=webp&amp;width=263&amp;height=421" alt="GIF - IMG WA.jpg?ex=bbab&amp;is=ab&amp;hm=bebacddbbceedffbafefdaccfa&amp;"/>
+        <hr>
+        <p id="copyText">1|9|9|2|-1|35|-20|20|0|0|0|20|20|31|-12|251|20|20|9|-24|292|-20|20|-8|6|264|20|20|-7|5|289|-20|20|5|3|0|20|20|0|0|312|20|20|5|3|0|20|20|27|-9|304|20|20|-3|3|359|-1|0|349|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>67.</b>
+    <div class="box">
+        <p>@https.koifish</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1195005754223100014/IMG-20240111-WA0019.jpg?ex=65bba555&amp;is=65a93055&amp;hm=6fa172c1cdd3c6f5a0f62cd8b7252b8d7d7751ffb6268f280a75e5e32d8db219&amp;=&amp;format=webp&amp;width=290&amp;height=420" alt="GIF - IMG WA.jpg?ex=bba&amp;is=a&amp;hm=faccddcfafcdbbddffbfaeeddb&amp;"/>
+        <hr>
+        <p id="copyText">5|1|2|0|0|0|20|20|0|0|0|20|20|-8|-3|298|20|20|11|-8|53|-20|20|-3|0|13|20|20|0|0|336|-20|20|0|0|0|20|20|-3|0|14|-20|20|0|0|0|20|20|-1|0|5|-20|20|0|0|0|-1|0|356|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>68.</b>
+    <div class="box">
+        <p>@https.koifish</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1195006109371600936/IMG-20240111-WA0022.jpg?ex=65bba5aa&amp;is=65a930aa&amp;hm=977f4d93854f06075d7046376542aeb6d9a46be27f6a47518084798ca866d1b2&amp;=&amp;format=webp&amp;width=317&amp;height=421" alt="GIF - IMG WA.jpg?ex=bbaaa&amp;is=aaa&amp;hm=fdfdaebdabefacadb&amp;"/>
+        <hr>
+        <p id="copyText">10|3|2|0|0|43|-20|20|0|0|0|20|20|25|1|169|20|20|6|-3|50|-20|20|-4|3|302|20|20|0|0|346|-20|20|1|1|0|20|20|-5|4|354|20|20|1|1|0|20|20|-2|4|21|20|20|2|1|0|-1|0|0|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>69.</b>
+    <div class="box">
+        <p>@aeronarc</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1195441169455382679/IMG_0313.png?ex=65bd3ad9&amp;is=65aac5d9&amp;hm=8d517d10157730044058a865c825d5b9daecfd87a5c7afa2aa9a6e25c0df917e&amp;=&amp;format=webp&amp;quality=lossless&amp;width=287&amp;height=421" alt="GIF - IMG .png?ex=bdad&amp;is=aacd&amp;hm=ddacdbdaecfdacafaaaaecdfe&amp;"/>
+        <hr>
+        <p id="copyText">1|7|3|0|0|0|20|20|0|0|0|20|20|-7|-41|167|-20|20|5|-37|74|18|28|-1|10|166|-20|20|3|15|183|20|20|0|4|324|20|20|-1|-2|7|20|20|21|0|29|20|22|-7|3|7|20|22|0|0|6|-1|0|0|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>70.</b>
+    <div class="box">
+        <p>@aeronarc</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1195441260538908682/IMG_0314.png?ex=65bd3aee&amp;is=65aac5ee&amp;hm=960a1c27d2e6b3ef15e918cc1cc4118b9a7f77eaabfc1287322858f062c86536&amp;=&amp;format=webp&amp;quality=lossless&amp;width=225&amp;height=421" alt="GIF - IMG .png?ex=bdaee&amp;is=aacee&amp;hm=acdebefeccccbafeaabfcfc&amp;"/>
+        <hr>
+        <p id="copyText">4|20|20|1|-1|47|-19|19|1|-2|350|19|19|-2|4|178|20|20|3|2|213|-20|20|-5|2|353|20|20|0|2|353|-20|20|3|1|309|20|20|0|-1|11|20|20|29|-5|32|20|21|-7|0|11|19|21|-6|1|3|-1|0|349|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>71.</b>
+    <div class="box">
+        <p>@theamethystangel</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1195445162600583178/IMG_7133.png?ex=65bd3e91&amp;is=65aac991&amp;hm=9ee33fe2ea31fd1019435a1483d051c969ea1633846b657eacc6d244c81fcbd5&amp;=&amp;format=webp&amp;quality=lossless&amp;width=305&amp;height=421" alt="GIF - IMG .png?ex=bde&amp;is=aac&amp;hm=eefeeafdadceabeaccdcfcbd&amp;"/>
+        <hr>
+        <p id="copyText">4|14|18|0|0|18|20|20|0|0|353|20|20|-15|-26|292|20|21|12|-35|194|-20|21|-4|-19|27|20|21|-5|-19|310|-20|21|4|-19|5|22|24|2|-19|355|22|24|-1|-11|11|22|24|6|-11|2|22|24|-6|-19|3|-1|-19|353|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>72.</b>
+    <div class="box">
+        <p>@theamethystangel</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1195445222608486470/IMG_7134.png?ex=65bd3e9f&amp;is=65aac99f&amp;hm=c0ae271b03fbcca0f698545c15b43379e763c6b059d65537d0bee9993cbfd83f&amp;=&amp;format=webp&amp;quality=lossless&amp;width=305&amp;height=421" alt="GIF - IMG .png?ex=bdef&amp;is=aacf&amp;hm=caebfbccafcbecbddbeecbfdf&amp;"/>
+        <hr>
+        <p id="copyText">8|7|12|0|1|33|-20|20|1|1|10|-20|20|13|-15|262|20|21|15|-31|110|-20|21|-3|-17|328|20|21|-2|-17|315|-20|21|3|-19|5|22|24|2|-19|0|22|24|-2|-11|11|22|24|2|-11|2|22|24|-6|-19|3|-1|-19|353|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>73.</b>
+    <div class="box">
+        <p>@azufnfgacha</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1195818713987948624/Screenshot_20240106-230102.png?ex=65be9a76&amp;is=65ac2576&amp;hm=9d017d521b6cc98c7b04a7379d13ab9467010a5772dd8a5260e8f65bf4db61cc&amp;=&amp;format=webp&amp;quality=lossless&amp;width=255&amp;height=421" alt="GIF - Screenshot .png?ex=bea&amp;is=ac&amp;hm=ddbcccbadabaddaefbfdbcc&amp;"/>
+        <hr>
+        <p id="copyText">6|1|2|0|0|0|20|20|0|0|0|20|20|13|2|256|20|20|3|0|97|-20|20|0|0|332|20|20|7|1|32|-20|20|0|0|343|20|20|-1|0|349|20|20|10|2|16|20|20|7|0|355|20|20|0|0|0|-1|0|0|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>74.</b>
+    <div class="box">
+        <p>@azufnfgacha</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1195818808582078634/Screenshot_20240106-192609.png?ex=65be9a8d&amp;is=65ac258d&amp;hm=8c748f6badfd10dc9ee3d0ce967ce912007a9b8cb4ca41b6330e7b86094a608a&amp;=&amp;format=webp&amp;quality=lossless&amp;width=271&amp;height=421" alt="GIF - Screenshot .png?ex=bead&amp;is=acd&amp;hm=cfbadfddceedceceabcbcabebaa&amp;"/>
+        <hr>
+        <p id="copyText">6|1|18|0|0|0|20|20|0|0|0|20|20|19|0|338|20|20|-1|9|230|-20|20|10|-2|342|20|20|-3|7|0|-20|20|-8|-5|345|20|20|-12|-8|356|20|20|-2|-3|31|20|20|-9|-5|349|20|20|14|1|17|-1|0|25|20|20|0|0|0|0|0|0|0|0|0|0|5|0|1|0|5|0|0|0|0|0</p>
+    </div>
+    <b>75.</b>
+    <div class="box">
+        <p>@iheart.noba</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1197267555572776992/Screenshot_20240117_123931_Gacha_Life_2.jpg?ex=65c3dfcd&amp;is=65b16acd&amp;hm=561dd08776aeec5b48c709eb0283687806491059d22be2c9a09ba1e2d97a1714&amp;=&amp;format=webp&amp;width=321&amp;height=421" alt="GIF - Screenshot Gacha Life .jpg?ex=cdfcd&amp;is=bacd&amp;hm=ddaeecbcebdbecabaeda&amp;"/>
+        <hr>
+        <p id="copyText">3|17|13|1|0|2|20|17|0|0|74|-18|19|22|-52|249|-17|33|2|-20|323|-14|30|-7|-12|212|17|23|-1|-23|356|-14|20|1|-5|6|15|27|-2|-5|347|-13|21|-4|0|6|18|27|18|-3|0|-14|22|-5|-28|4|0|-18|0|15|24|-2|0|0|0|-2|0|0|0|-1|0|6|-1|-8|0|12|-1|0|-3|5|-5</p>
+    </div>
+    <b>76.</b>
+    <div class="box">
+        <p>@._ac33__</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1197885095483293736/IMG_1608.png?ex=65bce46e&amp;is=65aa6f6e&amp;hm=0e79f6733f41770f0f6d1ce363a7beda20f30307e88e7c17a33237d6bf25093c&amp;=&amp;format=webp&amp;quality=lossless&amp;width=194&amp;height=420" alt="GIF - IMG .png?ex=bcee&amp;is=aafe&amp;hm=effffdceabedafeecadbfc&amp;"/>
+        <hr>
+        <p id="copyText">4|12|3|0|0|12|20|20|0|0|44|-20|20|3|3|359|20|20|9|-4|188|-20|20|1|0|355|20|20|1|0|341|-20|20|-3|0|0|20|20|-4|0|0|20|20|-3|0|0|20|20|-3|0|0|20|20|8|-1|359|0|0|4|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>77.</b>
+    <div class="box">
+        <p>@pumpy_lumpy</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1198019277282889811/Screenshot_20240120-001654_Gacha_Life_2.jpg?ex=65bd6165&amp;is=65aaec65&amp;hm=0c617766a929f525e255612f0f7e3d18e7310f6bec927b33c9146d9e9647e33c&amp;=&amp;format=webp&amp;width=673&amp;height=421" alt="GIF - Screenshot Gacha Life .jpg?ex=bd&amp;is=aaec&amp;hm=cafeffedefbecbcdeec&amp;"/>
+        <hr>
+        <p id="copyText">3|12|18|0|0|0|20|20|0|0|0|20|20|-11|-10|28|20|20|10|-14|253|-20|20|-2|-2|24|20|20|-2|2|313|-20|20|-2|-2|324|20|20|-3|-2|0|20|20|15|-6|65|20|20|-3|-2|12|20|20|-2|-2|0|-3|-2|0|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>78.</b>
+    <div class="box">
+        <p>@pumpy_lumpy</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1198019354286096444/Screenshot_20240120-001725_Gacha_Life_2.jpg?ex=65bd6178&amp;is=65aaec78&amp;hm=121ff51faec95c5c1fc6b167772a023c6470441f327cb218d3b2bac94fcf79d9&amp;=&amp;format=webp&amp;width=673&amp;height=421" alt="GIF - Screenshot Gacha Life .jpg?ex=bd&amp;is=aaec&amp;hm=fffaecccfcbacfcbdbbacfcfd&amp;"/>
+        <hr>
+        <p id="copyText">1|14|17|0|0|0|20|20|0|0|0|20|20|0|-9|213|20|20|8|-6|277|-20|20|0|0|12|20|20|0|0|336|-20|20|0|0|346|20|20|-1|0|334|20|20|7|-2|79|20|20|15|0|13|20|20|0|0|13|-1|0|2|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|0|0|0|0|0|0</p>
+    </div>
+    <b>79.</b>
+    <div class="box">
+        <p>@pumpy_lumpy</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1198020575965229178/Screenshot_20240120-001741_Gacha_Life_2.jpg?ex=65bd629b&amp;is=65aaed9b&amp;hm=461a0c984adf33c78771af1c6b899fd252b621b324340aeb61f20713a7384e71&amp;=&amp;format=webp&amp;width=673&amp;height=421" alt="GIF - Screenshot Gacha Life .jpg?ex=bdb&amp;is=aaedb&amp;hm=acadfcafcbfdbbaebfae&amp;"/>
+        <hr>
+        <p id="copyText">1|12|14|0|0|29|20|20|0|0|0|-20|20|-4|-5|302|20|20|6|-4|249|-20|20|0|0|9|20|20|0|0|344|-20|20|0|0|16|20|20|-1|0|3|20|20|-10|-2|30|20|20|-2|0|359|20|20|0|0|0|-1|0|0|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>80.</b>
+    <div class="box">
+        <p>@iinr_guest001</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1198452783574171798/IMG_2287.png?ex=65bef521&amp;is=65ac8021&amp;hm=549b1c94cc43261c7685e4fb38f0310be5668ad164457c47176c5070b09546ce&amp;=&amp;format=webp&amp;quality=lossless&amp;width=185&amp;height=421" alt="GIF - IMG .png?ex=bef&amp;is=ac&amp;hm=bccccefbfbeadccbce&amp;"/>
+        <hr>
+        <p id="copyText">1|20|20|0|0|0|-18|20|0|0|0|18|20|23|4|265|18|20|16|-19|255|-18|20|5|0|332|18|20|0|0|306|-18|20|-7|0|2|18|20|-10|1|327|18|20|-8|1|357|18|20|12|1|0|18|20|9|0|9|-1|0|21|18|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>81.</b>
+    <div class="box">
+        <p>@jzai.</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1198994948188557415/IMG_3574.png?ex=65c0ee0f&amp;is=65ae790f&amp;hm=605a78f24f99a81255098463ded8054c4c9a83a819d05bea98740e2aa1976204&amp;=&amp;format=webp&amp;quality=lossless&amp;width=315&amp;height=421" alt="GIF - IMG .png?ex=ceef&amp;is=aef&amp;hm=affadedccaadbeaeaa&amp;"/>
+        <hr>
+        <p id="copyText">4|1|7|0|0|32|20|20|1|0|54|-20|20|-9|0|305|20|20|13|-7|195|-20|20|0|7|18|20|20|0|8|321|-20|20|0|8|356|20|20|-5|7|0|-20|20|2|8|6|20|20|5|6|359|-20|20|0|7|0|-1|7|0|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>82.</b>
+    <div class="box">
+        <p>@_corruption._</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1199025971819446344/Screenshot_2024-01-22-18-15-24-596_air.com.lunime.gachalife2-edit.jpg?ex=65c10af4&amp;is=65ae95f4&amp;hm=5c64a2a76b795609acaca7d2cbef57ba369ec06156ee2c09469ff8443b5f4deb&amp;=&amp;format=webp&amp;width=288&amp;height=421" alt="GIF - Screenshot air.com.lunime.gachalife edit.jpg?ex=caf&amp;is=aef&amp;hm=caabacacadcbefbaeceecffbfdeb&amp;"/>
+        <hr>
+        <p id="copyText">1|14|14|0|0|0|20|20|0|0|0|20|20|13|4|336|20|20|-2|3|13|-20|20|2|1|338|20|20|2|2|8|-20|20|-4|0|348|20|20|-8|-4|20|-20|20|2|2|21|20|20|-9|1|355|-20|20|7|6|9|-1|0|10|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+    <b>83.</b>
+    <div class="box">
+        <p>@_corruption._</p>
+        <hr>
+        <img src="https://media.discordapp.net/attachments/1191910909011034242/1199026063343374426/Screenshot_2024-01-22-18-16-07-423_air.com.lunime.gachalife2-edit.jpg?ex=65c10b0a&amp;is=65ae960a&amp;hm=306772ea56c6b26395a0fae1260b275050ab5f07039e340784c26f0bf546355d&amp;=&amp;format=webp&amp;width=258&amp;height=421" alt="GIF - Screenshot air.com.lunime.gachalife edit.jpg?ex=cba&amp;is=aea&amp;hm=eacbafaebabfecfbfd&amp;"/>
+        <hr>
+        <p id="copyText">1|14|20|0|0|0|20|20|0|0|13|-20|20|13|4|336|20|20|25|-21|187|-20|20|2|1|338|20|20|6|5|301|-20|20|-4|0|348|20|20|-8|-4|20|-20|20|2|2|21|20|20|-9|1|355|-20|20|7|6|9|-1|0|10|20|20|0|0|0|0|0|0|0|0|0|0|5|0|0|0|5|0|0|0|0|0</p>
+    </div>
+
 
 
 <script src="script.js"></script>
