--- a/index.html
+++ b/index.html
@@ -27,13 +27,9 @@
 
   Helloo! My name's T/Terrence, and I'm the creator of this website, I don't claim to own any of these poses, but enjoy!
   <br><hr>
-  There are two other websites;
+    Here is the home page!
   <br><b>• </b>
-  Static Poses (you're here!!)
-  <br><b>• </b>
-  Animated Poses
-  <br><b>• </b>
-  Free Ocs
+  Gacha Life 2
 
 
 <script src="script.js"></script>
